--- a/kutirWebsite/src/index.html
+++ b/kutirWebsite/src/index.html
@@ -6,6 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i" rel="stylesheet">
+
+  <!--vendors styles-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- Bootstrap CSS / Color Scheme -->
+  <link rel="stylesheet" href="kutirWebsite/src/styles.css" id="theme-color">
 </head>
 <body>
   <app-root></app-root>
